test git add commit

--- a/src/main/scala/au/com/training/fizzbuzz/readMe
+++ b/src/main/scala/au/com/training/fizzbuzz/readMe
@@ -5,6 +5,13 @@ Return “fizz”, “buzz” or “fizzbuzz”.
 For a given natural number greater than zero return:
 
 “fizz” if the number is dividable by 3
+
+
+
+fgjsd;kgnkldsjgn ksjfxg;lbjsfxdl;c
+
+
+
 “buzz” if the number is dividable by 5
 “fizzbuzz” if the number is dividable by 15
 the same number if no other requirement is fulfilled
